feat: 增加产品详情
